Revelation changelog

---------------[ xxxx-xx-xx : 0.4.4 ]---------------

2005-06-03  Erik Grinaker <erikg@codepoet.no>

	* added global launcher settings to the applet preference dialog

	* applet dialogs use Revelation icon

2005-06-02  Erik Grinaker <erikg@codepoet.no>

	* applet popup menu now actually does stuff

	* applet can now autolock file when inactive

2005-06-01  Erik Grinaker <erikg@codepoet.no>

	* moved config checking from config module to application

	* implemented initial applet configuration handling

2005-05-31  Erik Grinaker <erikg@codepoet.no>

	* removed "New file" item from toolbar

	* added new toolbar item "Add Folder", instead of creating
	folders via "Add Entry"

	* removed unit tests

2005-05-15  Erik Grinaker <erikg@codepoet.no>

	* implemented basic applet user interface

2005-04-15  Erik Grinaker <erikg@codepoet.no>

	* initial applet file handling

2005-04-14  Erik Grinaker <erikg@codepoet.no>

	* fix syntax error in applet

	* wrote initial user interface

2005-04-13  Erik Grinaker <erikg@codepoet.no>

	* added initial applet skeleton

2005-04-06  Erik Grinaker <erikg@codepoet.no>

	* don't crash on missing revelation logo icon


---------------[ 2005-03-31 : 0.4.3 ]---------------

2005-03-31  Erik Grinaker <erikg@codepoet.no>

	* search for crack_mkdict and crack_packer in addition to
	the normal cracklib commands

	* bumped version number to 0.4.3

2005-03-24  Erik Grinaker <erikg@codepoet.no>

	* don't wrap gnome_authentication_manager_dialog_is_visible()
	(only available from libgnomeui-2.7.92)

	* minor cleanups of authmanager wrapping code

2005-03-23  Erik Grinaker <erikg@codepoet.no>

	* make configure search for new cracklib-format and
	cracklib-packer commands as well as the old mkdict and
	packer commands

	* stop autolock-timer when manually locking file, to avoid
	crash when timer tries to re-lock file

2005-03-22  Erik Grinaker <erikg@codepoet.no>

	* added quit button to unlock file dialog

